# WireSentinel-ZTNA

./: Cargo.toml  README.md
.github/workflows/: ci.yml
analytics/: Cargo.toml
analytics/src/: analytics.rs  lib.rs
analytics/tests/: analytics.rs
connectors/: Cargo.toml
connectors/src/: connector.rs  health.rs  lib.rs
connectors/tests/: connectors.rs
controller/: Cargo.toml
controller/src/: dto.rs  lib.rs
controller/tests/: controller.rs
docs/: architecture.md
gateway/: Cargo.toml
gateway/src/: gateway.rs  lib.rs
gateway/tests/: gateway.rs
identity/: Cargo.toml
identity/src/: lib.rs  manager.rs  provider.rs
identity/src/providers/: local.rs  mock.rs  mod.rs  oidc.rs
identity/tests/: identity.rs
policy/: Cargo.toml
policy/src/: conditional.rs  engine.rs  lib.rs
policy/tests/: policy.rs
publishing/: Cargo.toml
publishing/src/: lib.rs  publisher.rs
publishing/tests/: publishing.rs
sdk/: Cargo.toml
sdk/src/: lib.rs  manifest.rs  plugin.rs
sdk/tests/: sdk.rs
segmentation/: Cargo.toml
segmentation/src/: engine.rs  lib.rs
segmentation/tests/: segmentation.rs
trust/: Cargo.toml
trust/src/: engine.rs  lib.rs  score.rs
trust/tests/: trust.rs
ztna-core/: Cargo.toml
ztna-core/src/: error.rs  lib.rs
ztna-core/tests/: core.rs
