[workspace]
resolver = "2"
members = [
    "ztna-core",
    "identity",
    "trust",
    "policy",
    "gateway",
    "connectors",
    "segmentation",
    "publishing",
    "analytics",
    "sdk",
    "controller",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["WireSentinel Contributors"]
repository = "https://github.com/WireSentinel/WireSentinel-ZTNA"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

shared-types = { path = "../WireSentinel/shared-types" }
ztna-core = { path = "ztna-core" }
identity = { path = "identity" }
trust = { path = "trust" }
policy = { path = "policy" }
gateway = { path = "gateway" }
connectors = { path = "connectors" }
segmentation = { path = "segmentation" }
publishing = { path = "publishing" }
analytics = { path = "analytics" }
sdk = { path = "sdk" }
controller = { path = "controller" }
