[package]
name = "identity"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ztna-core = { workspace = true }
shared-types = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
