[package]
name = "publishing"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
sqlite = ["dep:sqlx"]

[dependencies]
ztna-core = { workspace = true }
shared-types = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
