[package]
name = "sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ztna-core = { workspace = true }
shared-types = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
ztna-core = { workspace = true }
